compiler/testData/diagnostics/tests/sealed/NeverObject.kt
<!WRONG_MODIFIER_TARGET!>sealed<!> object Sealed {

}
